--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <tfoot class="text-gray-700 dark:text-gray-400 text-2xl" style="height: 5%;">
         <tr>
             <th colspan="4" class="px-6 py-3 bg-blue-300 w-full text-center">
-              <span class="text-red-600">Code WiFi : "035-wifi" | Mot de passe : "cnfptbzh"</span>
+              <span class="text-red-600">WiFi : CNFPT_INVITES</span>
               <img src="https://upload.wikimedia.org/wikipedia/fr/6/62/Logo_cnfpt.svg" style="margin-left: 2.4em;" class="inline-flex text-dark-50 float-left w-12">
               <span id="pagination" class="text-dark-50 float-right"></span>
             </th>
